# exess

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .includes.imp  INSTALL.md  NEWS  README.md  meson.build  meson_options.txt
.reuse/: dep5
bindings/cpp/: meson.build
bindings/cpp/include/exess/: exess.hpp
bindings/cpp/test/: .clang-tidy  meson.build  test_exess_hpp.cpp
doc/: Doxyfile.in  conf.py.in  description.rst  index.rst  meson.build  overview.rst  summary.rst
doc/_static/: meson.build
doc/api/: meson.build
doc/c/: Doxyfile.in  index.rst  meson.build  overview.rst
doc/c/api/: meson.build
doc/c/man/: meson.build
doc/c/xml/: meson.build
doc/cpp/: Doxyfile.in  index.rst  meson.build  overview.rst
doc/cpp/api/: meson.build
doc/cpp/xml/: meson.build
doc/epub/: meson.build
doc/html/: meson.build
doc/man/: meson.build
doc/man/man3/: alias.man.in  meson.build
doc/singlehtml/: meson.build
doc/xml/: meson.build
include/exess/: exess.h
meson/: meson.build
meson/suppressions/: meson.build
meson/warnings/: meson.build
scripts/: dox_to_sphinx.py  make_man_link.py
src/: .clang-tidy  attributes.h  base64.c  bigint.c  bigint.h  boolean.c  byte.c  canonical.c  coerce.c  compare.c  datatype.c  date.c  date_time.c  date_utils.c  date_utils.h  datetime.c  decimal.c  decimal.h  digits.c  digits.h  double.c  duration.c  exess_config.h  float.c  floating_decimal.c  floating_decimal.h  hex.c  ieee_float.h  int.c  int_math.c  int_math.h  long.c  macros.h  read_utils.c  read_utils.h  result.h  scientific.c  scientific.h  short.c  soft_float.c  (+20 more)
test/: .clang-tidy  double_test_utils.h  float_test_data.h  float_test_utils.h  int_test_data.h  int_test_utils.h  meson.build  num_test_utils.h  test_base64.c  test_bigint.c  test_boolean.c  test_byte.c  test_canonical.c  test_coerce.c  test_compare.c  test_datatype.c  test_date.c  test_date_time.c  test_datetime.c  test_decimal.c  test_double.c  test_duration.c  test_float.c  test_hex.c  test_int.c  test_int_math.c  test_long.c  test_short.c  test_strerror.c  test_time.c  test_timezone.c  test_ubyte.c  test_uint.c  test_ulong.c  test_ushort.c  test_value.c  test_variant.c  time_test_utils.h  write_test_utils.h
test/headers/: .clang-tidy  test_headers.c
