# Copyright 2021-2025 David Robillard <d@drobilla.net>
# SPDX-License-Identifier: 0BSD OR ISC

option('checks', type: 'feature', value: 'enabled',
       description: 'Check for platform-specific features')

option('docs', type: 'feature',
       description: 'Build documentation')

option('epub', type: 'feature', value: 'disabled',
       description: 'Build EPub documentation')

option('html', type: 'feature',
       description: 'Build paginated HTML documentation')

option('lint', type: 'boolean', value: false,
       description: 'Run code quality checks')

option('man', type: 'feature',
       description: 'Build man page documentation')

option('man_links', type: 'combo',
       choices: ['disabled', 'auto', 'alias', 'symbolic'],
       description: 'Create man page aliases/symlinks for symbols')

option('singlehtml', type: 'feature',
       description: 'Build single-page HTML documentation')

option('tests', type: 'feature',
       description: 'Build tests')

option('title', type: 'string', value: 'Exess',
       description: 'Project title')

option('use_builtin_clz', type: 'feature',
       description: 'Use __builtin_clz')

option('use_builtin_clzll', type: 'feature',
       description: 'Use __builtin_clzll')
